--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -104,6 +104,9 @@
     </style>
 </head>
 <body>
+<div class="buttons-container">
+            <a href="/" class="nav-button">Главная</a>
+        </div>
     <div class="container">
         <div class="logo">
             <img src="{{ url_for('static', filename='up_2.jpg') }}" alt="Эмблема Used Parts">
